--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -54,12 +54,20 @@ $color-institucional: #39A900
 
 // Colores Curso ---------------------------------------
 
-$color-primario: #522981
-$color-secundario: #7DD3E9
-$color-acento-contenido: #FF4A69
-$color-acento-botones: #FFCD0D
-$color-adicional-1: #CDDC39
-$color-adicional-2: #00BCD4
+$color-primario: #F8DE53
+$color-secundario: #4C4B48
+$color-acento-contenido: #F88E15
+$color-acento-botones: #A82250
+$color-adicional-1: #95C072
+$color-adicional-2: #FCF1BA
+$color-adicional-3: #D4E6C6
+$color-adicional-4: #DBDBDA
+$color-adicional-5: #B7B7B6
+$color-adicional-6: #EDEDED
+$color-adicional-7: #FDF8DD
+$color-adicional-8: #FCD2A1
+$color-adicional-9: #FDE8D0
+
 
 // Color Tipografias -----------------------------------
 $color-headers: $color-sistema-texto
@@ -75,11 +83,11 @@ $color-link-hover: darken($color-sistema-texto, 25%)
 
 // Color Botones ---------------------------------------
 $color-btn-fondo: $color-acento-botones
-$color-btn-texto: $color-sistema-texto
+$color-btn-texto: white
 
 // Colores banner --------------------------------------
 $color-banner-fondo: $white
-$color-banner-text: $white
+$color-banner-text: $color-sistema-texto
 
 // Colores anexos
 $color-fondo-anexo: $color-sistema-g
